# jetsetter

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
src/jetsetter/: __init__.py  cli.py
tests/: test_interpreter.py
tests/fixtures/: expected_pycharm.xml
