[project]
name = "jetsetter"
version = "0.1.1"
description = "A CLI for working with PyCharm intepreters."
authors = [
    { name = "Sam Phinizy", email = "83414895+sam-phinizy@users.noreply.github.com" }
]
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.urls]
homepage = "https://github.com/sam-phinizy/jetsetter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.2",
    "pytest>=8.0.2",
    "xmldiff>=2.6.3",
    "nox>=2023.4.22",
    "pyright>=1.1.351",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jetsetter"]

[project.scripts]
jetsetter = "jetsetter.cli:app"
